--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,6 +10,26 @@ services:
       - IS_PERSISTENT=TRUE
       - ANONYMIZED_TELEMETRY=FALSE
     restart: unless-stopped
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: ["redis-server", "--appendonly", "yes"]
+    restart: unless-stopped
+
+  embeddings:
+    build: ./embeddings
+    container_name: embeddings
+    ports:
+      - "5000:5000"
+    restart: unless-stopped
 
 volumes:
   chroma_data:
+  redis_data:
