--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0"
   },
