--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0"
   },
